discussion/kv_engine/172221/172221_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Create MockCouchKVStore in replaceCouchKVStore

It's test code so the greater flexibility is useful.

Change-Id: Ib76d1c35b85db9d9e725b2fde6bbd11f42824ae1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-18 13:17:00.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-18 13:41:37.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16076/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16076/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16076/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44536/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/159]: disk>RAM delete paged-out...(49 ms) OK


99% tests passed, 2 tests failed out of 425

Total Test time (real) = 683.59 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44536/ )

Timeout of a CTest test 424/425 Test  #69: ep-engine_ep_unit_tests.DurabilityRespondAmbiguousTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44536/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14996/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_couch_kvstore.h b/engines/ep/tests/mock/mock_couch_kvstore.h
index f50f53c35..1b65e67cd 100644
--- a/engines/ep/tests/mock/mock_couch_kvstore.h
+++ b/engines/ep/tests/mock/mock_couch_kvstore.h
@@ -120,7 +120,8 @@ public:
 
         updateLocalDocuments(*db, pendingLocalReqsQ);
 
-        errCode = couchstore_commit(db, [](const std::system_error&amp;){return true;});
+        errCode = couchstore_commit(
+                db, [](const std::system_error&amp;) { return true; });
 
         return !errCode;
     }
diff --git a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
index 88a3b89df..0c0f2966d 100644
--- a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
@@ -85,7 +85,8 @@ public:
 
     void failAllSnapshotVBuckets() override {
         using namespace testing;
-        EXPECT_CALL(ops, sync(_, _)).WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
+        EXPECT_CALL(ops, sync(_, _))
+                .WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -122,9 +123,7 @@ public:
     }
 
     void failAllSnapshotVBuckets() override {
-        kvstore-&gt;snapshotVBucketErrorInjector = []() {
-            return false;
-        };
+        kvstore-&gt;snapshotVBucketErrorInjector = []() { return false; };
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -893,7 +892,8 @@ TEST_P(KVStoreErrorInjectionTest, WarmupVBucketWithoutState) {
     // Before the fix we would fail during a warmup backfill as magma would not
     // create a scan context if a vBucket state did not exist on disk.
     EXPECT_NO_THROW(runReadersUntilWarmedUp());
-    EXPECT_EQ(WarmupState::State::Done, engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
+    EXPECT_EQ(WarmupState::State::Done,
+              engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
 }
 
 INSTANTIATE_TEST_SUITE_P(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14996/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18166/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18166/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17844/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17844/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26251/ : FAILURE

Failure of GoogleTest "ExecutorPoolTest/0.ScheduleCancelx2":

<pre>
[ RUN      ] ExecutorPoolTest/0.ScheduleCancelx2
[2022-03-18T13:25:24.845Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:731: Failure
[2022-03-18T13:25:24.845Z] Value of: this->pool->cancel(taskId, false)
[2022-03-18T13:25:24.845Z]   Actual: false
[2022-03-18T13:25:24.845Z] Expected: true
[2022-03-18T13:25:24.845Z] [  FAILED  ] ExecutorPoolTest/0.ScheduleCancelx2, where TypeParam = TestExecutorPool (3 ms)
ExecutorPoolTest/0.ScheduleCancelx2
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26251/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5791/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5791/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5733/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16918/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18877/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
